--- a/Layouts/vaccinations.yaml
+++ b/Layouts/vaccinations.yaml
@@ -24,7 +24,8 @@ cards:
       Number of people who have received a vaccination for COVID-19, by day on which the vaccine was reported. 
       Data are reported daily, and include all vaccination events that are entered on the relevant system at 
       the time of extract. This includes reported vaccines that were administered up to and including the date 
-      shown. Numbers for 15 and 16 January 2021 were not reported in Scotland and Wales.
+      shown. Numbers for 15 and 16 January 2021 were not reported in Scotland and Wales and were added to the 
+      figure for 17 January.
     
     download:
       - newPeopleVaccinatedFirstDoseByPublishDate
