--- a/Layouts/deaths.yaml
+++ b/Layouts/deaths.yaml
@@ -1872,8 +1872,183 @@ cards:
 
 # {{ StartDevOnlyBlock }}
 
+# only shown for UK
+
+  - heading: Daily deaths with COVID-19 on the death certificate by date of death
+    cardType: multiAreaStatic
+    locationAware:
+      included: 
+        areaType:
+          - overview
+
+    fullWidth: true
+    abstract: > 
+      Number of deaths of people whose death certificate mentioned COVID-19 as one of the causes.
+      The data are published weekly by the ONS, NRS and NISRA and there is a lag in reporting of 
+      at least 11 days because the data are based on death registrations.
+    
+    download:
+      - newDailyNsoDeathsByDeathDate
+      - cumDailyNsoDeathsByDeathDate
+
+    options:
+      type: radio
+      heading: null
+      choices:
+        - UK total
+        - By nation
+
+    UK total:
+     
+      tabs: 
+        - heading: Daily
+          tabType: chart
+          barType: stack
+          colours: [0] # areaNames in alphabetical order
+          params:
+            - key: areaType
+              sign: "="
+              value: overview
+          fields:
+            - label: ""
+              value: newDailyNsoDeathsByDeathDate
+              tooltip: Daily number of deaths where COVID-19 is mentioned as a cause on the death certificate by date of death 
+              type: bar
+              colour: 0
+              rollingAverage: false
+              highlight: 
+                from: -11
+                to: 0
+                colour: 6
+                label: "Most recent 11 days (incomplete)"
+
+            - label: (7-day average)
+              value: newDailyNsoDeathsByDeathDate
+              tooltip: 7 day rolling average of the daily number of deaths where COVID-19 is mentioned as a cause on the death certificate
+              type: line
+              colour: 3
+              rollingAverage:
+                window: 7
+                clipEnd: 11 #no of days to exclude for incomplete data
+            
+      # - heading: Cumulative
+      #   tabType: chart
+      #   barType: stack
+      #   colours: [0] # areaNames in alphabetical order
+      #   params:
+      #     - key: areaType
+      #       sign: "="
+      #       value: overview
+      #   fields:
+      #     - label: ""
+      #       value: cumDailyNsoDeathsByDeathDate
+      #       tooltip: Cumulative total number of deaths where COVID-19 is mentioned as a cause on the death certificate by date of death 
+      #       type: bar
+      #       colour: 0
+      #       rollingAverage: false
+      #       highlight: 
+      #         from: -11
+      #         to: 0
+      #         colour: 6
+      #         label: "Most recent 11 days (incomplete)"
+            
+        - heading: Data
+          tabType: table
+          params:
+            - key: areaType
+              sign: "="
+              value: overview
+          fields:
+            - label: Date
+              value: date
+              type: date
+              tooltip: Date
+
+            - label: daily
+              value: newDailyNsoDeathsByDeathDate
+              type: numeric
+              tooltip: Daily number of deaths where COVID-19 is mentioned as a cause on the death certificate by date of death 
+
+            - label: total
+              value: cumDailyNsoDeathsByDeathDate
+              type: numeric
+              tooltip: Cumulative total number of deaths where COVID-19 is mentioned as a cause on the death certificate by date of death
+
+        - heading: About 
+          tabType: metadata
+          filename: cardMetadata/deaths/cardNsoDailyDeathsTimeSeries.md
+
+    By nation:
+      
+      tabs: 
+        - heading: Daily
+          tabType: chart
+          barType: stack
+          colours: [0, 9, 3, 10] # areaNames in alphabetical order
+          params:
+            - key: areaType
+              sign: "="
+              value: nation
+          fields:
+            - label: ""
+              value: newDailyNsoDeathsByDeathDate
+              tooltip: Daily number of deaths where COVID-19 is mentioned as a cause on the death certificate by date of death 
+              type: bar
+              colour: 0
+              rollingAverage: false
+
+            
+      # - heading: Cumulative
+      #   tabType: chart
+      #   barType: stack
+      #   colours: [0, 9, 3, 10] # areaNames in alphabetical order
+      #   params:
+      #     - key: areaType
+      #       sign: "="
+      #       value: nation
+      #   fields:
+      #     - label: ""
+      #       value: cumDailyNsoDeathsByDeathDate
+      #       tooltip: Cumulative total number of deaths where COVID-19 is mentioned as a cause on the death certificate by date of death 
+      #       type: bar
+      #       colour: 0
+      #       rollingAverage: false
+
+            
+        - heading: Data
+          tabType: table
+          params:
+            - key: areaType
+              sign: "="
+              value: nation
+          fields:
+            - label: Date
+              value: date
+              type: date
+              tooltip: Date
+
+            - label: daily
+              value: newDailyNsoDeathsByDeathDate
+              type: numeric
+              tooltip: Daily number of deaths where COVID-19 is mentioned as a cause on the death certificate by date of death 
+
+            - label: total
+              value: cumDailyNsoDeathsByDeathDate
+              type: numeric
+              tooltip: Cumulative total number of deaths where COVID-19 is mentioned as a cause on the death certificate by date of death
+
+        - heading: About 
+          tabType: metadata
+          filename: cardMetadata/deaths/cardNsoDailyDeathsTimeSeries.md
+
+# not shown for UK
+
   - heading: Daily deaths with COVID-19 on the death certificate by date of death
     cardType: chart
+    locationAware:
+      excluded: 
+        areaType:
+          - overview
 
     fullWidth: true
     abstract: > 
@@ -1897,10 +2072,10 @@ cards:
             colour: 0
             rollingAverage: false
             highlight: 
-                from: -7
+                from: -11
                 to: 0
                 colour: 6
-                label: "Most recent week (incomplete)"
+                label: "Most recent 11 days (incomplete)"
 
           - label: (7-day average)
             value: newDailyNsoDeathsByDeathDate
@@ -1909,7 +2084,7 @@ cards:
             colour: 3
             rollingAverage:
               window: 7
-              clipEnd: 7 #no of days to exclude for incomplete data
+              clipEnd: 11 #no of days to exclude for incomplete data
             
       # - heading: Cumulative
       #   tabType: chart
@@ -1942,6 +2117,7 @@ cards:
       - heading: About 
         tabType: metadata
         filename: cardMetadata/deaths/cardNsoDailyDeathsTimeSeries.md
+
 
 # {{ EndDevOnlyBlock }}
 
