--- a/Layouts/cases.yaml
+++ b/Layouts/cases.yaml
@@ -1483,6 +1483,32 @@ cards:
       - newCasesBySpecimenDateRollingRate
 
     tabs:
+      - heading: UK
+        tabType: table
+        params:
+          - key: areaType
+            sign: "="
+            value: overview
+
+        latestBy: newCasesBySpecimenDateRollingRate
+        sortBy: areaName
+
+        fields:
+          - label: Area
+            value: areaName
+            type: string
+            tooltip: ""
+
+          - label: Cases
+            value: newCasesBySpecimenDateRollingSum
+            type: numeric
+            tooltip: Total number of people tested positive in the 7-day period ending {date}
+
+          - label: Rate per 100,000 population
+            value: newCasesBySpecimenDateRollingRate
+            type: numeric
+            tooltip: Rate of total number of people tested positive in the 7-day period per 100,000 resident population
+
       - heading: Nation
         tabType: table
         params:
@@ -1610,6 +1636,32 @@ cards:
       - cumCasesByPublishDateRate
 
     tabs:
+      - heading: UK
+        tabType: table
+        params:
+          - key: areaType
+            sign: "="
+            value: overview
+
+        latestBy: cumCasesByPublishDate
+        sortBy: areaName
+
+        fields:
+          - label: Area
+            value: areaName
+            type: string
+            tooltip: ""
+
+          - label: Cases
+            value: cumCasesByPublishDate
+            type: numeric
+            tooltip: Cumulative total number of people tested positive up to {date}
+
+          - label: Rate per 100,000 population
+            value: cumCasesByPublishDateRate
+            type: numeric
+            tooltip: Rate of total confirmed people tested positive per 100,000 resident population
+
       - heading: Nation
         tabType: table
         params:
