restores UK deaths

--- a/Layouts/deaths.yaml
+++ b/Layouts/deaths.yaml
@@ -69,7 +69,7 @@ cards:
       type: radio
       heading: null
       choices:
-        # - UK total
+        - UK total
         - By nation
 
     UK total:
