--- a/Layouts/vaccinations.yaml
+++ b/Layouts/vaccinations.yaml
@@ -538,3 +538,243 @@ cards:
           - heading: About 
             tabType: metadata
             filename: cardMetadata/healthcare/cardVaccinationsWeekly.md
+
+############################################################################################################################## 
+
+ # {{ StartDevOnlyBlock }} 
+
+  - heading: People who have received vaccinations, by report date (daily)
+    cardType: multiAreaStatic
+    locationAware:
+      included: 
+        areaType:
+          - nation
+
+    fullWidth: true
+    abstract: >
+      Number of people who have received a vaccination for COVID-19, by day on which the vaccine was reported. 
+      Data are reported daily, and include all vaccination events that are entered on the relevant system at 
+      the time of extract. This includes reported vaccines that were administered up to and including the date 
+      shown. Data for each nation has not been reported on all days and included in the total for subsequent days. See the About section for details.
+    
+    download:
+      - newPeopleVaccinatedFirstDoseByPublishDate
+      - newPeopleVaccinatedSecondDoseByPublishDate
+      - cumPeopleVaccinatedFirstDoseByPublishDate
+      - cumPeopleVaccinatedSecondDoseByPublishDate
+    
+    tabs: 
+
+      - heading: 1st dose daily
+        tabType: chart
+        barType: normal
+
+        fields:
+          - label: number of people received 1st dose
+            value: newPeopleVaccinatedFirstDoseByPublishDate
+            tooltip: Daily reported number of people who received the first dose of COVID-19 vaccine
+            type: bar
+            colour: 0
+            rollingAverage: false
+
+ # {{ StartDevOnlyBlock }}             
+
+          - label: 1st dose (7-day average)
+            value: newPeopleVaccinatedFirstDoseByPublishDate
+            tooltip: 7-day rolling average of the daily reported number of people who received the first dose of COVID-19 vaccine
+            type: line
+            colour: 3
+            fill: false
+            rollingAverage:
+              window: 7
+              clipEnd: 0 #no of days to exclude for incomplete data
+
+# {{ EndDevOnlyBlock }}
+
+      - heading: 2nd dose daily
+        tabType: chart
+        barType: normal
+
+        fields:
+          - label: number of people received 2nd dose
+            value: newPeopleVaccinatedSecondDoseByPublishDate
+            tooltip: Daily reported number of people who received the second dose of COVID-19 vaccine
+            type: bar
+            colour: 0
+            rollingAverage: false
+
+ # {{ StartDevOnlyBlock }}             
+
+          - label: 2nd dose (7-day average)
+            value: newPeopleVaccinatedSecondDoseByPublishDate
+            tooltip: 7-day rolling average of the daily reported number of people who received the second dose of COVID-19 vaccine
+            type: line
+            colour: 3
+            fill: false
+            rollingAverage:
+              window: 7
+              clipEnd: 0 #no of days to exclude for incomplete data
+
+# {{ EndDevOnlyBlock }}
+
+            
+      - heading: 1st dose cumulative
+        tabType: chart
+       
+        fields:
+          - label: number of people received 1st dose
+            value: cumPeopleVaccinatedFirstDoseByPublishDate
+            tooltip: Cumulative reported number of people who received the first dose of COVID-19 vaccine
+            type: bar
+            colour: 0
+            rollingAverage: false
+            
+      - heading: 2nd dose cumulative
+        tabType: chart
+         
+        fields:
+          - label: number of people received 2nd dose
+            value: cumPeopleVaccinatedSecondDoseByPublishDate
+            tooltip: Cumulative reported number of people who received the second dose of COVID-19 vaccine
+            type: bar
+            colour: 0
+            rollingAverage: false            
+
+      - heading: Data
+        tabType: table
+        
+        fields:
+            - label: Report date
+              value: date
+              type: date
+              tooltip: Date
+
+            - label: "1st dose daily"
+              value: newPeopleVaccinatedFirstDoseByPublishDate
+              type: numeric
+              tooltip: Daily reported number of people who received the first dose of COVID-19 vaccine
+
+            - label: "2nd dose daily"
+              value: newPeopleVaccinatedSecondDoseByPublishDate
+              type: numeric
+              tooltip: Daily reported number of people who received the second dose of COVID-19 vaccine
+
+            - label: "1st dose total"
+              value: cumPeopleVaccinatedFirstDoseByPublishDate
+              type: numeric
+              tooltip: Cumulative number of people who received the first dose of COVID-19 vaccine
+
+            - label: "2nd dose total"
+              value: cumPeopleVaccinatedSecondDoseByPublishDate
+              type: numeric
+              tooltip: Cumulative number of people who received the second dose of COVID-19 vaccine
+ 
+      - heading: About 
+        tabType: metadata
+        filename: cardMetadata/healthcare/cardVaccinationsDaily.md
+
+# {{ EndDevOnlyBlock }}
+
+############################################################################################################################## 
+
+ # {{ StartDevOnlyBlock }} 
+
+  - heading: People who have received vaccinations, by vaccination date (weekly)
+    cardType: multiAreaStatic
+    locationAware:
+      included: 
+        areaType:
+          - nation
+
+    fullWidth: true
+    abstract: >
+      Number of people who have received a vaccination for COVID-19, by week in which the vaccine was administered. Data were
+      provided by NHS England for the combined period 8 to 20 December. This is shown in the England and UK values for the week 
+      ending 20 December, so no England or UK values are presented for week ending 13 December. 
+    
+    download:
+      - weeklyPeopleVaccinatedFirstDoseByVaccinationDate
+      - cumPeopleVaccinatedFirstDoseByVaccinationDate
+      - weeklyPeopleVaccinatedSecondDoseByVaccinationDate
+      - cumPeopleVaccinatedSecondDoseByVaccinationDate
+    
+    tabs: 
+
+      - heading: 1st dose weekly
+        tabType: chart
+        barType: normal
+
+        fields:
+          - label: number of people received 1st dose
+            value: weeklyPeopleVaccinatedFirstDoseByVaccinationDate
+            tooltip: Weekly number of people who received the first dose of COVID-19 vaccine
+            type: bar
+            colour: 0
+            rollingAverage: false
+
+      - heading: 2nd dose weekly
+        tabType: chart
+        barType: normal
+
+        fields:
+          - label: number of people received 2nd dose
+            value: weeklyPeopleVaccinatedSecondDoseByVaccinationDate
+            tooltip: Weekly number of people who received the secind dose of COVID-19 vaccine
+            type: bar
+            colour: 0
+            rollingAverage: false
+
+      - heading: 1st dose cumulative
+        tabType: chart
+        fields:
+          - label: number of people received 1st dose
+            value: cumPeopleVaccinatedFirstDoseByVaccinationDate
+            tooltip: Cumulative number of people who received the first dose of COVID-19 vaccine
+            type: bar
+            colour: 0
+            rollingAverage: false
+          
+      - heading: 2nd dose cumulative
+        tabType: chart
+        fields:
+          - label: number of people received 2nd dose
+            value: cumPeopleVaccinatedSecondDoseByVaccinationDate
+            tooltip: Cumulative number of people who received the second dose of COVID-19 vaccine
+            type: bar
+            colour: 0
+            rollingAverage: false
+        
+      - heading: Data
+        tabType: table
+
+        fields:
+          - label: Week ending date
+            value: date
+            type: date
+            tooltip: Week ending date
+
+          - label: "1st dose weekly"
+            value: weeklyPeopleVaccinatedFirstDoseByVaccinationDate
+            type: numeric
+            tooltip: Weekly number of people who received the first dose of COVID-19 vaccine 
+
+          - label: "2nd dose weekly"
+            value: weeklyPeopleVaccinatedSecondDoseByVaccinationDate
+            type: numeric
+            tooltip: Weekly number of people who received the second dose of COVID-19 vaccine              
+
+          - label: "1st dose total"
+            value: cumPeopleVaccinatedFirstDoseByVaccinationDate
+            type: numeric
+            tooltip: Cumulative number of people who received the first dose of COVID-19 vaccine
+
+          - label: "2nd dose total"
+            value: cumPeopleVaccinatedSecondDoseByVaccinationDate
+            type: numeric
+            tooltip: Cumulative number of people who received the second dose of COVID-19 vaccine
+ 
+      - heading: About 
+        tabType: metadata
+        filename: cardMetadata/healthcare/cardVaccinationsWeekly.md
+
+# {{ EndDevOnlyBlock }}
